--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
  </head>
 	
 <body>
-<video   id="vd" controls="controls" name="media" autoplay>
+<audio   id="vd" controls="controls" autoplay="autoplay">
 
-	<source id="v1" src="music/001.mp3" type="audio/mpeg" />
+	<source  src="music/001.mp3" type="audio/mpeg" />
 
-</video>
+</audio>
 
 
 
