--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>李化云个人主页</title>
-    <!-- for-mobile-apps -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="李化云,B站,bilibili,哔哩哔哩" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="keywords" content="李化云,B站,bilibili,哔哩哔哩"/>
     <meta name="description" content="李化云，专注CG三十年，专注秒可十三年。;李化云的主页、动态、视频、专栏、频道、收藏、订阅等。哔哩哔哩Bilibili，你感兴趣的视频都在B站。"/>
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
     <!-- //for-mobile-apps -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
     <link rel="stylesheet" href="css/swipebox.css">
     <!-- js -->
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 </head>
 
 <body>
-<audio   id="vd" controls="controls" autoplay="autoplay">
+<audio id="vd" controls="controls" autoplay="autoplay">
 
-    <source  src="music/001.mp3" type="audio/mpeg" />
+    <source src="music/001.mp3" type="audio/mpeg"/>
 
 </audio>
-
-
 
 
 <div class="banner_body">
@@ -47,36 +44,36 @@
                             <div class="tab-1 resp-tab-content" aria-labelledby="tab_item-1">
                                 <!-- home -->
                                 <div class="wthree_tab_content">
-                                    <img src="images/banner.jpg" alt=" " class="img-responsive" />
+                                    <img src="images/banner.jpg" alt=" " class="img-responsive"/>
 
                                     <div class="wthree_tab_content_pos">
                                         <div class="wthree_tab_content_pos_grid">
                                             <h2>你好</h2>
                                             <h3>我是人类高质量男性 </h3>
-                                            <h3 style="color: #e91d1e;font-weight: bold" >李化云</h3>
+                                            <h3 style="color: #e91d1e;font-weight: bold">李化云</h3>
                                             <ul class="address">
-                                                <li>
-                                                    <ul class="address-text">
-                                                        <li><b>电话 </b></li>
-                                                        <li>188*****962</li>
-                                                    </ul>
-                                                </li>
+
                                                 <li>
                                                     <ul class="address-text">
                                                         <li><b>地址 </b></li>
                                                         <li>中华人民共和国</li>
                                                     </ul>
                                                 </li>
+
                                                 <li>
                                                     <ul class="address-text">
-                                                        <li><b>邮件 </b></li>
-                                                        <li>huaweiceo@qq.com</li>
+                                                        <li><b>B站空间 </b></li>
+                                                        <li><a href="https://space.bilibili.com/3904143"
+                                                               target="_blank">点击进入</a></li>
                                                     </ul>
                                                 </li>
                                                 <li>
                                                     <ul class="address-text">
-                                                        <li><b>B站空间 </b></li>
-                                                        <li><a href="https://space.bilibili.com/3904143" target="_blank" >点击进入</a> </li>
+                                                        <li><b>Bhelper v1.1.6 </b></li>
+                                                        <li>
+                                                            <a href="https://github.com/cglun/Bi/archive/refs/heads/main.zip"
+                                                               target="_blank">点击下载</a> <span style="font-size: 10px;color: black;font-weight: initial"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【更新时间： 2022-1-26 17:15:18】 </span>
+                                                        </li>
                                                     </ul>
                                                 </li>
                                             </ul>
@@ -89,7 +86,7 @@
                                 <!-- about -->
                                 <div class="agile_about">
                                     <div class="agile_about_pos">
-                                        <img src="images/head.png" alt=" " class="img-responsive" />
+                                        <img src="images/head.png" alt=" " class="img-responsive"/>
                                     </div>
                                 </div>
                                 <div class="agileits_agile_about">
@@ -100,35 +97,35 @@
                                     <div class="col-md-6 agileits_agile_about_right">
                                         <h4>为了理想活着</h4>
                                     </div>
-                                    <div class="clearfix"> </div>
+                                    <div class="clearfix"></div>
                                     <div class="agileits_skills_grids">
                                         <div class="col-md-6 agileits_skills_grid">
                                             <div class="skills">
-                                                <div class="skill1" style="width:80%"> </div>
+                                                <div class="skill1" style="width:80%"></div>
                                                 <div class="bar">
                                                     <p>HTML / CSS3 / SASS</p>
                                                 </div>
                                             </div>
                                             <div class="skills skills1">
-                                                <div class="skill3" style="width:75%"> </div>
+                                                <div class="skill3" style="width:75%"></div>
                                                 <div class="bar">
                                                     <p>Javascript,java,php</p>
                                                 </div>
                                             </div>
                                             <div class="skills skills2">
-                                                <div class="skill4" style="width:60%"> </div>
+                                                <div class="skill4" style="width:60%"></div>
                                                 <div class="bar">
                                                     <p>Wordpress</p>
                                                 </div>
                                             </div>
                                             <div class="skills skills3">
-                                                <div class="skill5" style="width:36%"> </div>
+                                                <div class="skill5" style="width:36%"></div>
                                                 <div class="bar">
                                                     <p>Php</p>
                                                 </div>
                                             </div>
                                             <div class="skills skills3">
-                                                <div class="skill5" style="width:36%"> </div>
+                                                <div class="skill5" style="width:36%"></div>
                                                 <div class="bar">
                                                     <p>blender</p>
                                                 </div>
@@ -136,23 +133,24 @@
                                         </div>
                                         <div class="col-md-6 agileits_skills_grid">
                                             <div class="skills">
-                                                <div class="skill1" style="width:90%"> </div>
+                                                <div class="skill1" style="width:90%"></div>
                                                 <div class="bar">
                                                     <p>……</p>
                                                 </div>
                                             </div>
 
                                         </div>
-                                        <div class="clearfix"> </div>
+                                        <div class="clearfix"></div>
                                     </div>
                                 </div>
-                                <!-- //about --><div class="tlinks">来自<a href="https://space.bilibili.com/3904143" >B站李化云</a></div>
+                                <!-- //about -->
+                                <div class="tlinks">来自<a href="https://space.bilibili.com/3904143">B站李化云</a></div>
                             </div>
                             <div class="tab-3 resp-tab-content" aria-labelledby="tab_item-3">
                                 <!-- work -->
                                 <div class="agile_about">
                                     <div class="agile_about_pos">
-                                        <img src="images/head.png" alt=" " class="img-responsive" />
+                                        <img src="images/head.png" alt=" " class="img-responsive"/>
                                     </div>
                                 </div>
                                 <div class="agileits_agile_about">
@@ -179,7 +177,7 @@
                                     <!-- swipe box js -->
                                     <script src="js/jquery.swipebox.min.js"></script>
                                     <script type="text/javascript">
-                                        jQuery(function($) {
+                                        jQuery(function ($) {
                                             $(".swipebox").swipebox();
                                         });
                                     </script>
@@ -191,7 +189,7 @@
                                 <!-- blog -->
                                 <div class="agile_about">
                                     <div class="agile_about_pos">
-                                        <img src="images/head.png" alt=" " class="img-responsive" />
+                                        <img src="images/head.png" alt=" " class="img-responsive"/>
                                     </div>
                                 </div>
                                 <div class="agileits_agile_about">
@@ -230,10 +228,6 @@
                                     <div>基本不用博客</div>
 
 
-
-
-
-
                                 </div>
                                 <!-- //blog -->
                             </div>
@@ -241,7 +235,7 @@
                                 <!-- contact -->
                                 <div class="agile_about">
                                     <div class="agile_about_pos">
-                                        <img src="images/head.png" alt=" " class="img-responsive" />
+                                        <img src="images/head.png" alt=" " class="img-responsive"/>
                                     </div>
                                 </div>
                                 <div class="agileits_agile_about">
@@ -260,7 +254,8 @@
                                         <!--												<textarea name="Message" placeholder="Message..." required></textarea>-->
                                         <!--												<input type="submit" value="Submit">-->
                                         <!--											</form>-->
-                                        <div> B站私信即可 <a href="https://space.bilibili.com/3904143"  target="_blank">【进入B站】</a></div>
+                                        <div> B站私信即可 <a href="https://space.bilibili.com/3904143"
+                                                        target="_blank">【进入B站】</a></div>
                                     </div>
                                 </div>
 
@@ -281,10 +276,11 @@
                     });
                 </script>
             </div>
-            <div class="clearfix"> </div>
+            <div class="clearfix"></div>
         </div>
         <div class="agileits_copyright">
-            <p>Copyright &copy; 化云工作室版权所有 <a href="https://space.bilibili.com/3904143" target="_blank" title="B站李化云">B站李化云</a></p>
+            <p>Copyright &copy; 化云工作室版权所有 <a href="https://space.bilibili.com/3904143" target="_blank" title="B站李化云">B站李化云</a>
+            </p>
         </div>
     </div>
 </div>
@@ -292,10 +288,16 @@
 <script src="js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
 <style>
-    .copyrights{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
+    .copyrights {
+        text-indent: -9999px;
+        height: 0;
+        line-height: 0;
+        font-size: 0;
+        overflow: hidden;
+    }
 </style>
 <div class="copyrights" id="links20210126">
-    Collect from <a href="https://space.bilibili.com/3904143"  title="B站李化云">B站李化云</a>
+    Collect from <a href="https://space.bilibili.com/3904143" title="B站李化云">B站李化云</a>
     <a href="https://space.bilibili.com/3904143" title="李化云">李化云</a>
 </div>
 
