--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <ul class="resp-tabs-list">
                                 <li class="resp-tab-item" aria-controls="tab_item-1" id="tab_item-1">首页</li>
                                 <li class="resp-tab-item" aria-controls="tab_item-2" id="tab_item-2">关于我</li>
-                                <li class="resp-tab-item" aria-controls="tab_item-3" id="tab_item-3">我的工作</li>
+                                <li class="resp-tab-item" aria-controls="tab_item-3" id="tab_item-3">我的作品</li>
                                 <li class="resp-tab-item" aria-controls="tab_item-4" id="tab_item-4">我的博客</li>
                                 <li class="resp-tab-item" aria-controls="tab_item-5" id="tab_item-5">联系方式</li>
                             </ul>
@@ -154,25 +154,55 @@
                                     </div>
                                 </div>
                                 <div class="agileits_agile_about">
-                                    <h3>我的工作</h3>
-                                    <!--										<div class="agileits_agile_about_portfolio">-->
-                                    <!--											<div class="col-md-4 agileits_agile_about_portfolio_left">-->
-                                    <!--												<div class="w3_portfolio_grid view second-effect">-->
-                                    <!--													<a href="images/2.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non.">-->
-                                    <!--														<img src="images/2.jpg" alt=" " class="img-responsive" />-->
-                                    <!--														<div class="mask">-->
-                                    <!--															<p>李化云个人主页</p>-->
-                                    <!--														</div>-->
-                                    <!--													</a>-->
-                                    <!--												</div>-->
-                                    <!--											</div>-->
+                                    <h3>我的作品</h3>
+<!--                                    										<div class="agileits_agile_about_portfolio">-->
+<!--                                    											<div class="col-md-4 agileits_agile_about_portfolio_left">-->
+<!--                                    												<div class="w3_portfolio_grid view second-effect">-->
+<!--                                    													<a href="images/2.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non.">-->
+<!--                                    														<img src="images/2.jpg" alt=" " class="img-responsive" />-->
+<!--                                    														<div class="mask">-->
+<!--                                    															<p>李化云个人主页</p>-->
+<!--                                    														</div>-->
+<!--                                    													</a>-->
+<!--                                    												</div>-->
+<!--                                    											</div>-->
 
 
-                                    <!--											<div class="clearfix"> </div>-->
-                                    <!--										</div>-->
+<!--                                    											<div class="clearfix"> </div>-->
+<!--                                    										</div>-->
 
 
-                                    <div>学习</div>
+                                    <div class="zuopin">
+                                       <ul>
+                                           <li>
+                                               <a href=""> <img src="images/zuopin/youxiji.jpg" alt="游戏机"></a>
+                                                  <h4> 游戏机</h4>
+                                                  <h4> <a href="">下载</a></h4>
+
+
+                                           </li>
+                                           <li>
+                                               <a href="model/index.html" target="_blank"> <img src="images/zuopin/youxiji.jpg" alt="游戏机"></a>
+                                               <h4>大闹钟</h4>
+                                               <h4> <a href="model/models/naozhong.glb" target="_blank">下载</a></h4>
+
+
+                                           </li>
+                                           <li>
+                                               <a href=""> <img src="images/zuopin/youxiji.jpg" alt="游戏机"></a>
+                                               <h4> 游戏机</h4>
+                                               <h4> <a href="">下载</a></h4>
+
+
+                                           </li>
+
+
+                                       </ul>
+
+
+
+
+                                    </div>
 
                                     <!-- swipe box js -->
                                     <script src="js/jquery.swipebox.min.js"></script>
