--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <audio id="vd" controls="controls" autoplay="autoplay">
 
-    <source src="music/003.mp3" type="audio/mpeg"/>
+    <source src="music/001.mp3" type="audio/mpeg"/>
 
 </audio>
 
@@ -175,14 +175,14 @@
                                     <div class="zuopin">
                                        <ul>
                                            <li>
-                                               <a href=""> <img src="images/zuopin/youxiji.jpg" alt="游戏机"></a>
+                                               <a href="model/youxiji.html"> <img src="images/zuopin/youxiji.jpg" alt="游戏机"></a>
                                                   <h4> 游戏机</h4>
-                                                  <h4> <a href="">下载</a></h4>
+                                                  <h4> <a href="model/models/youxiji.glb">下载</a></h4>
 
 
                                            </li>
                                            <li>
-                                               <a href="model/index.html" target="_blank"> <img src="images/zuopin/youxiji.jpg" alt="游戏机"></a>
+                                               <a href="model/index.html" target="_blank"> <img src="images/zuopin/naozhong.jpg" alt="闹钟"></a>
                                                <h4>大闹钟</h4>
                                                <h4> <a href="model/models/naozhong.glb" target="_blank">下载</a></h4>
 
