--- a/index.html
+++ b/index.html
@@ -175,23 +175,23 @@
                                     <div class="zuopin">
                                        <ul>
                                            <li>
-                                               <a href="model/youxiji.html"> <img src="images/zuopin/youxiji.jpg" alt="游戏机"></a>
+                                               <a href="model/youxiji.html" target="_blank"> <img src="images/zuopin/youxiji.jpg" alt="游戏机" title="点击查看3D游戏机"></a>
                                                   <h4> 游戏机</h4>
                                                   <h4> <a href="model/models/youxiji.glb">下载</a></h4>
 
 
                                            </li>
                                            <li>
-                                               <a href="model/index.html" target="_blank"> <img src="images/zuopin/naozhong.jpg" alt="闹钟"></a>
+                                               <a href="model/index.html" target="_blank"> <img src="images/zuopin/naozhong.jpg" alt="闹钟" title="点击查看3D闹钟"></a>
                                                <h4>大闹钟</h4>
                                                <h4> <a href="model/models/naozhong.glb" target="_blank">下载</a></h4>
 
 
                                            </li>
                                            <li>
-                                               <a href=""> <img src="images/zuopin/youxiji.jpg" alt="游戏机"></a>
+                                               <a href="model/qingtongjian.html" target="_blank"> <img src="images/zuopin/qingtongjian.jpg" alt="青铜剑" title="点击查看3D青铜剑"></a>
                                                <h4> 游戏机</h4>
-                                               <h4> <a href="">下载</a></h4>
+                                               <h4> <a href="model/models/qingtongjian.glb">下载</a></h4>
 
 
                                            </li>
