--- a/model/qingtongjian.html
+++ b/model/qingtongjian.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>3D闹钟，bilibili李化云</title>
+    <title>3D青铜剑，bilibili李化云</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link type="text/css" rel="stylesheet" href="main.css">
     <meta name="keywords" content="夜黑论坛,贴吧经典版本，贴吧千里眼，贴吧助手,贴吧工具箱，贴吧工具大全，贴吧查询，贴吧查ID，3D闹钟"/>
     <meta name="description" content="贴吧经典版,致力于打造怀旧的贴吧玩法，贴吧始于2003，兴于2012，衰于2015，因为权限狗太垃圾，导致贴吧口水骂战多，夜黑论坛贴吧经典版本专为
-    贴吧元老而生，在这里没有权限狗，可以畅所欲言，3D闹钟。"/>
+    贴吧元老而生，在这里没有权限狗，可以畅所欲言，3D青铜剑。"/>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
 </head>
 
 <body>
