--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <audio id="vd" controls="controls" autoplay="autoplay">
 
-    <source src="music/001.mp3" type="audio/mpeg"/>
+    <source src="music/bgm.ogg" type="audio/ogg"/>
 
 </audio>
 
