--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="李化云,B站,bilibili,哔哩哔哩"/>
     <meta name="description" content="李化云，专注CG三十年，专注秒可十三年。;李化云的主页、动态、视频、专栏、频道、收藏、订阅等。哔哩哔哩Bilibili，你感兴趣的视频都在B站。"/>
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
     <!-- //for-mobile-apps -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
@@ -16,7 +16,11 @@
 </head>
 
 <body>
+<audio id="vd" controls="controls" autoplay="autoplay">
 
+    <source src="music/bgm.ogg" type="audio/ogg"/>
+
+</audio>
 
 
 <div class="banner_body">
@@ -186,11 +190,12 @@
                                            </li>
                                            <li>
                                                <a href="model/qingtongjian.html" target="_blank"> <img src="images/zuopin/qingtongjian.jpg" alt="青铜剑" title="点击查看3D青铜剑"></a>
-                                               <h4> 游戏机</h4>
+                                               <h4> 青铜剑</h4>
                                                <h4> <a href="model/models/qingtongjian.glb">下载</a></h4>
 
 
                                            </li>
+
 
 
                                        </ul>
