--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-<audio id="vd" controls="controls" autoplay="autoplay">
+<audio id="vd" controls="controls" >
 
-    <source src="music/bgm00.ogg" type="audio/ogg"/>
+    <source src="music/bgm.ogg" type="audio/ogg"/>
 
 </audio>
 
@@ -335,7 +335,7 @@
 <script>
     $(".resp-tabs-list li").click(function () {
         //console.log($("#vd")[0].play())
-        $("#vd")[0].play()
+       // $("#vd")[0].play()
 
 
     })
