--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
 
 
                                            </li>
+                                           <li>
+                                               <a href="model/tiezuan.html" target="_blank"> <img src="images/zuopin/tiezuan.jpg" alt="铁钻" title="点击查看3D铁钻"></a>
+                                               <h4>铁钻</h4>
+                                               <h4> <a href="model/models/tiezuan.glb">下载</a></h4>
+
+
+                                           </li>
 
 
 
@@ -335,7 +342,7 @@
 <script>
     $(".resp-tabs-list li").click(function () {
         //console.log($("#vd")[0].play())
-       // $("#vd")[0].play()
+      //  $("#vd")[0].play()
 
 
     })
