--- a/index.html
+++ b/index.html
@@ -202,6 +202,22 @@
 
 
                                            </li>
+                                           <li>
+                                               <a href="model/haihunshan.html" target="_blank"> <img src="images/zuopin/haihunshan.jpg" alt="海魂衫" title="点击查看3D海魂衫"></a>
+                                               <h4>海魂衫</h4>
+                                               <h4> <a href="model/models/haihunshan.glb">下载</a></h4>
+
+
+                                           </li>
+                                           <li>
+                                               <a href="model/heimanba.html" target="_blank">
+                                                   <img src="images/zuopin/heimanba.jpg" alt="黑曼巴蛇" title="点击查看3D黑曼巴蛇">
+                                               </a>
+                                               <h4>黑曼巴蛇</h4>
+                                               <h4> <a href="model/models/heimanba.glb">下载</a></h4>
+
+
+                                           </li>
 
 
 
