--- a/index.html
+++ b/index.html
@@ -218,6 +218,13 @@
 
 
                                            </li>
+                                           <li>
+                                               <a href="model/tixudao.html" target="_blank"> <img src="images/zuopin/tixudao.jpg" alt="剃须刀" title="点击查看3D剃须刀"></a>
+                                               <h4> 剃须刀</h4>
+                                               <h4> <a href="model/models/tixudao.glb">下载</a></h4>
+
+
+                                           </li>
 
 
 
