--- a/index.html
+++ b/index.html
@@ -225,6 +225,17 @@
 
 
                                            </li>
+                                           <li>
+                                               <a href="model/kele.html" target="_blank">
+                                                   <img src="images/zuopin/kele.jpg" alt="可乐" title="点击查看3D可乐">
+                                               </a>
+                                               <h4> 可乐</h4>
+                                               <h4>
+                                                   <a href="model/models/kele.glb">下载</a>
+                                               </h4>
+
+
+                                           </li>
 
 
 
