--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <audio id="vd" controls="controls">
-    <source src="music/bgm.ogg" type="audio/ogg"></source>
+    <source src="https://heiye-3gi4mv6t9934013e-1256012498.tcloudbaseapp.com/music/bgm.ogg" type="audio/ogg"></source>
 </audio>
 <div class="banner_body">
     <div class="container">
@@ -161,14 +161,14 @@
                                     <!--                                    										</div>-->
                                     <div class="zuopin">
                                         <ul>
-                                            <li> <a href="model/youxiji.html" target="_blank"> <img src="images/zuopin/youxiji.jpg" alt="游戏机" title="点击查看3D游戏机" /></a> <h4> 游戏机</h4> <h4> <a href="model/models/youxiji.glb">下载</a></h4> </li>
-                                            <li> <a href="model/index.html" target="_blank"> <img src="images/zuopin/naozhong.jpg" alt="闹钟" title="点击查看3D闹钟" /></a> <h4>大闹钟</h4> <h4> <a href="model/models/naozhong.glb" target="_blank">下载</a></h4> </li>
-                                            <li> <a href="model/qingtongjian.html" target="_blank"> <img src="images/zuopin/qingtongjian.jpg" alt="青铜剑" title="点击查看3D青铜剑" /></a> <h4> 青铜剑</h4> <h4> <a href="model/models/qingtongjian.glb">下载</a></h4> </li>
-                                            <li> <a href="model/tiezuan.html" target="_blank"> <img src="images/zuopin/tiezuan.jpg" alt="铁钻" title="点击查看3D铁钻" /></a> <h4>铁钻</h4> <h4> <a href="model/models/tiezuan.glb">下载</a></h4> </li>
-                                            <li> <a href="model/haihunshan.html" target="_blank"> <img src="images/zuopin/haihunshan.jpg" alt="海魂衫" title="点击查看3D海魂衫" /></a> <h4>海魂衫</h4> <h4> <a href="model/models/haihunshan.glb">下载</a></h4> </li>
-                                            <li> <a href="model/heimanba.html" target="_blank"> <img src="images/zuopin/heimanba.jpg" alt="黑曼巴蛇" title="点击查看3D黑曼巴蛇" /> </a> <h4>黑曼巴蛇</h4> <h4> <a href="model/models/heimanba.glb">下载</a></h4> </li>
-                                            <li> <a href="model/tixudao.html" target="_blank"> <img src="images/zuopin/tixudao.jpg" alt="剃须刀" title="点击查看3D剃须刀" /></a> <h4> 剃须刀</h4> <h4> <a href="model/models/tixudao.glb">下载</a></h4> </li>
-                                            <li> <a href="model/kele.html" target="_blank"> <img src="images/zuopin/kele.jpg" alt="可乐" title="点击查看3D可乐" /> </a> <h4> 可乐</h4> <h4> <a href="model/models/kele.glb">下载</a> </h4> </li>
+                                            <li> <a href="https://heiye-3gi4mv6t9934013e-1256012498.tcloudbaseapp.com/model/youxiji.html" target="_blank"> <img src="images/zuopin/youxiji.jpg" alt="游戏机" title="点击查看3D游戏机" /></a> <h4> 游戏机</h4> <h4> <a href="model/models/youxiji.glb">下载</a></h4> </li>
+                                            <li> <a href="https://heiye-3gi4mv6t9934013e-1256012498.tcloudbaseapp.com/model/index.html" target="_blank"> <img src="images/zuopin/naozhong.jpg" alt="闹钟" title="点击查看3D闹钟" /></a> <h4>大闹钟</h4> <h4> <a href="model/models/naozhong.glb" target="_blank">下载</a></h4> </li>
+                                            <li> <a href="https://heiye-3gi4mv6t9934013e-1256012498.tcloudbaseapp.com/model/qingtongjian.html" target="_blank"> <img src="images/zuopin/qingtongjian.jpg" alt="青铜剑" title="点击查看3D青铜剑" /></a> <h4> 青铜剑</h4> <h4> <a href="model/models/qingtongjian.glb">下载</a></h4> </li>
+                                            <li> <a href="https://heiye-3gi4mv6t9934013e-1256012498.tcloudbaseapp.com/model/tiezuan.html" target="_blank"> <img src="images/zuopin/tiezuan.jpg" alt="铁钻" title="点击查看3D铁钻" /></a> <h4>铁钻</h4> <h4> <a href="model/models/tiezuan.glb">下载</a></h4> </li>
+                                            <li> <a href="https://heiye-3gi4mv6t9934013e-1256012498.tcloudbaseapp.com/model/haihunshan.html" target="_blank"> <img src="images/zuopin/haihunshan.jpg" alt="海魂衫" title="点击查看3D海魂衫" /></a> <h4>海魂衫</h4> <h4> <a href="model/models/haihunshan.glb">下载</a></h4> </li>
+                                            <li> <a href="https://heiye-3gi4mv6t9934013e-1256012498.tcloudbaseapp.com/model/heimanba.html" target="_blank"> <img src="images/zuopin/heimanba.jpg" alt="黑曼巴蛇" title="点击查看3D黑曼巴蛇" /> </a> <h4>黑曼巴蛇</h4> <h4> <a href="model/models/heimanba.glb">下载</a></h4> </li>
+                                            <li> <a href="https://heiye-3gi4mv6t9934013e-1256012498.tcloudbaseapp.com/model/tixudao.html" target="_blank"> <img src="images/zuopin/tixudao.jpg" alt="剃须刀" title="点击查看3D剃须刀" /></a> <h4> 剃须刀</h4> <h4> <a href="model/models/tixudao.glb">下载</a></h4> </li>
+                                            <li> <a href="https://heiye-3gi4mv6t9934013e-1256012498.tcloudbaseapp.com/model/kele.html" target="_blank"> <img src="images/zuopin/kele.jpg" alt="可乐" title="点击查看3D可乐" /> </a> <h4> 可乐</h4> <h4> <a href="model/models/kele.glb">下载</a> </h4> </li>
                                         </ul>
                                     </div>
                                     <!-- swipe box js -->
