--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="stylesheet" href="css/swipebox.css" />
+    <meta name="baidu-site-verification" content="code-Uj92vZ9351" />
     <!-- js -->
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 </head>
