--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="李化云,B站,bilibili,哔哩哔哩" />
     <meta name="description" content="李化云，专注CG三十年，专注秒可十三年。;李化云的主页、动态、视频、专栏、频道、收藏、订阅等。哔哩哔哩Bilibili，你感兴趣的视频都在B站。" />
-    <link rel="shortcut icon" href="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://www.yehei.top/images/favicon.ico" type="image/x-icon" />
     <!-- //for-mobile-apps -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -16,7 +16,7 @@
 </head>
 <body>
 <audio id="vd" controls="controls">
-    <source src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/music/bgm.ogg" type="audio/ogg"></source>
+    <source src="https://www.yehei.top/music/bgm.ogg" type="audio/ogg"></source>
 </audio>
 <div class="banner_body">
     <div class="container">
@@ -38,7 +38,7 @@
                             <div class="tab-1 resp-tab-content" aria-labelledby="tab_item-1">
                                 <!-- home -->
                                 <div class="wthree_tab_content">
-                                    <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/banner.jpg" alt=" " class="img-responsive" />
+                                    <img src="https://www.yehei.top/images/banner.jpg" alt=" " class="img-responsive" />
                                     <div class="wthree_tab_content_pos">
                                         <div class="wthree_tab_content_pos_grid">
                                             <h2>你好</h2>
@@ -75,7 +75,7 @@
                                 <!-- about -->
                                 <div class="agile_about">
                                     <div class="agile_about_pos">
-                                        <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/head.png" alt=" " class="img-responsive" />
+                                        <img src="https://www.yehei.top/images/head.png" alt=" " class="img-responsive" />
                                     </div>
                                 </div>
                                 <div class="agileits_agile_about">
@@ -141,7 +141,7 @@
                                 <!-- work -->
                                 <div class="agile_about">
                                     <div class="agile_about_pos">
-                                        <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/head.png" alt=" " class="img-responsive" />
+                                        <img src="https://www.yehei.top/images/head.png" alt=" " class="img-responsive" />
                                     </div>
                                 </div>
                                 <div class="agileits_agile_about">
@@ -149,8 +149,8 @@
                                     <!--                                    										<div class="agileits_agile_about_portfolio">-->
                                     <!--                                    											<div class="col-md-4 agileits_agile_about_portfolio_left">-->
                                     <!--                                    												<div class="w3_portfolio_grid view second-effect">-->
-                                    <!--                                    													<a href="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/2.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non.">-->
-                                    <!--                                    														<img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/2.jpg" alt=" " class="img-responsive" />-->
+                                    <!--                                    													<a href="https://www.yehei.top/images/2.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non.">-->
+                                    <!--                                    														<img src="https://www.yehei.top/images/2.jpg" alt=" " class="img-responsive" />-->
                                     <!--                                    														<div class="mask">-->
                                     <!--                                    															<p>李化云个人主页</p>-->
                                     <!--                                    														</div>-->
@@ -161,14 +161,14 @@
                                     <!--                                    										</div>-->
                                     <div class="zuopin">
                                         <ul>
-                                            <li> <a href="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/model/youxiji.html" target="_blank"> <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/zuopin/youxiji.jpg" alt="游戏机" title="点击查看3D游戏机" /></a> <h4> 游戏机</h4> <h4> <a href="model/models/youxiji.glb">下载</a></h4> </li>
-                                            <li> <a href="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/model/index.html" target="_blank"> <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/zuopin/naozhong.jpg" alt="闹钟" title="点击查看3D闹钟" /></a> <h4>大闹钟</h4> <h4> <a href="model/models/naozhong.glb" target="_blank">下载</a></h4> </li>
-                                            <li> <a href="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/model/qingtongjian.html" target="_blank"> <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/zuopin/qingtongjian.jpg" alt="青铜剑" title="点击查看3D青铜剑" /></a> <h4> 青铜剑</h4> <h4> <a href="model/models/qingtongjian.glb">下载</a></h4> </li>
-                                            <li> <a href="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/model/tiezuan.html" target="_blank"> <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/zuopin/tiezuan.jpg" alt="铁钻" title="点击查看3D铁钻" /></a> <h4>铁钻</h4> <h4> <a href="model/models/tiezuan.glb">下载</a></h4> </li>
-                                            <li> <a href="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/model/haihunshan.html" target="_blank"> <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/zuopin/haihunshan.jpg" alt="海魂衫" title="点击查看3D海魂衫" /></a> <h4>海魂衫</h4> <h4> <a href="model/models/haihunshan.glb">下载</a></h4> </li>
-                                            <li> <a href="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/model/heimanba.html" target="_blank"> <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/zuopin/heimanba.jpg" alt="黑曼巴蛇" title="点击查看3D黑曼巴蛇" /> </a> <h4>黑曼巴蛇</h4> <h4> <a href="model/models/heimanba.glb">下载</a></h4> </li>
-                                            <li> <a href="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/model/tixudao.html" target="_blank"> <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/zuopin/tixudao.jpg" alt="剃须刀" title="点击查看3D剃须刀" /></a> <h4> 剃须刀</h4> <h4> <a href="model/models/tixudao.glb">下载</a></h4> </li>
-                                            <li> <a href="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/model/kele.html" target="_blank"> <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/zuopin/kele.jpg" alt="可乐" title="点击查看3D可乐" /> </a> <h4> 可乐</h4> <h4> <a href="model/models/kele.glb">下载</a> </h4> </li>
+                                            <li> <a href="https://www.yehei.top/model/youxiji.html" target="_blank"> <img src="https://www.yehei.top/images/zuopin/youxiji.jpg" alt="游戏机" title="点击查看3D游戏机" /></a> <h4> 游戏机</h4> <h4> <a href="model/models/youxiji.glb">下载</a></h4> </li>
+                                            <li> <a href="https://www.yehei.top/model/index.html" target="_blank"> <img src="https://www.yehei.top/images/zuopin/naozhong.jpg" alt="闹钟" title="点击查看3D闹钟" /></a> <h4>大闹钟</h4> <h4> <a href="model/models/naozhong.glb" target="_blank">下载</a></h4> </li>
+                                            <li> <a href="https://www.yehei.top/model/qingtongjian.html" target="_blank"> <img src="https://www.yehei.top/images/zuopin/qingtongjian.jpg" alt="青铜剑" title="点击查看3D青铜剑" /></a> <h4> 青铜剑</h4> <h4> <a href="model/models/qingtongjian.glb">下载</a></h4> </li>
+                                            <li> <a href="https://www.yehei.top/model/tiezuan.html" target="_blank"> <img src="https://www.yehei.top/images/zuopin/tiezuan.jpg" alt="铁钻" title="点击查看3D铁钻" /></a> <h4>铁钻</h4> <h4> <a href="model/models/tiezuan.glb">下载</a></h4> </li>
+                                            <li> <a href="https://www.yehei.top/model/haihunshan.html" target="_blank"> <img src="https://www.yehei.top/images/zuopin/haihunshan.jpg" alt="海魂衫" title="点击查看3D海魂衫" /></a> <h4>海魂衫</h4> <h4> <a href="model/models/haihunshan.glb">下载</a></h4> </li>
+                                            <li> <a href="https://www.yehei.top/model/heimanba.html" target="_blank"> <img src="https://www.yehei.top/images/zuopin/heimanba.jpg" alt="黑曼巴蛇" title="点击查看3D黑曼巴蛇" /> </a> <h4>黑曼巴蛇</h4> <h4> <a href="model/models/heimanba.glb">下载</a></h4> </li>
+                                            <li> <a href="https://www.yehei.top/model/tixudao.html" target="_blank"> <img src="https://www.yehei.top/images/zuopin/tixudao.jpg" alt="剃须刀" title="点击查看3D剃须刀" /></a> <h4> 剃须刀</h4> <h4> <a href="model/models/tixudao.glb">下载</a></h4> </li>
+                                            <li> <a href="https://www.yehei.top/model/kele.html" target="_blank"> <img src="https://www.yehei.top/images/zuopin/kele.jpg" alt="可乐" title="点击查看3D可乐" /> </a> <h4> 可乐</h4> <h4> <a href="model/models/kele.glb">下载</a> </h4> </li>
                                         </ul>
                                     </div>
                                     <!-- swipe box js -->
@@ -186,7 +186,7 @@
                                 <!-- blog -->
                                 <div class="agile_about">
                                     <div class="agile_about_pos">
-                                        <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/head.png" alt=" " class="img-responsive" />
+                                        <img src="https://www.yehei.top/images/head.png" alt=" " class="img-responsive" />
                                     </div>
                                 </div>
                                 <div class="agileits_agile_about">
@@ -194,7 +194,7 @@
                                     <!--										<div class="agileits_agile_about_blog">-->
                                     <!--											<div class="col-md-6 agileits_agile_about_blog_left">-->
                                     <!--												<div class="agile_about_blog_left_grid">-->
-                                    <!--													<a href="#" data-toggle="modal" data-target="#myModal"><img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/8.jpg" alt=" " class="img-responsive" /></a>-->
+                                    <!--													<a href="#" data-toggle="modal" data-target="#myModal"><img src="https://www.yehei.top/images/8.jpg" alt=" " class="img-responsive" /></a>-->
                                     <!--													<div class="agile_about_blog_left_grid_pos">-->
                                     <!--														<ul>-->
                                     <!--															<li>20</li>-->
@@ -229,7 +229,7 @@
                                 <!-- contact -->
                                 <div class="agile_about">
                                     <div class="agile_about_pos">
-                                        <img src="https://6865-heiye-3gi4mv6t9934013e-1256012498.tcb.qcloud.la/images/head.png" alt=" " class="img-responsive" />
+                                        <img src="https://www.yehei.top/images/head.png" alt=" " class="img-responsive" />
                                     </div>
                                 </div>
                                 <div class="agileits_agile_about">
