--- a/app/index.html
+++ b/app/index.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>手机APP更新</title>
+</head>
+<body>
+    <h1>版本1，时间：2022年3月22日</h1>
+    <a href="http://" target="_blank"  >下载版本1</a>
+    
+</body>
+</html>
