--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
     <title>手机APP更新</title>
 </head>
 <body>
-    <h1>版本1，时间：2022年3月22日</h1>
-    <a href="http://" target="_blank"  >下载版本1</a>
+    <h3>APP发布时间：2022年3月23日</h3>
+    <a href="https://www.yehei.top" target="_blank"  >下载APP</a>
     
 </body>
 </html>
