--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 <body>
     <h5>APP发布时间：2022年3月23日</h5>
     <h5 style="color:red">此程序为完全免费应用程序，如果有人向你售卖，请立即退货</h5>
+     <h6 style="color:green">此程序为最终版本，不再更新。</h6>
    
 </body>
 </html>
