--- a/tbnotice.html
+++ b/tbnotice.html
@@ -1,1 +1,15 @@
-贴吧公告啊
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>公告</title>
+</head>
+<body>
+    <h3 style="text-align: center;">公告</h3>
+    <p>此程序完全免费</p>
+    <p>李化云</p>
+    
+</body>
+</html>
