--- a/model/zixingche.html
+++ b/model/zixingche.html
@@ -14,7 +14,7 @@
 <body>
 <div id="info">
 
-    <div href=" " target="_blank" rel="noopener">海魂衫  by 李化云</div>
+    <div href=" " target="_blank" rel="noopener">自行车  by 李化云</div>
 </div>
 
 <script type="module">
