--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li> <a href="https://github.com/cglun/BhelperPack/archive/refs/heads/main.zip" target="_blank">点击下载</a> <span style="font-size: 10px;color: black;font-weight: initial"> &nbsp;&nbsp;&nbsp;【更新时间： 2022-2-9】（搜狗浏览器等） </span> </li> -->
 
                 <li><b>贴吧光签</b></li> 
-                <li><a href="https://lilun.lanzout.com/iYc5D05du9sb" target="_blank" style="background-color: #005fff; padding: 3px 10px;border-radius: 3px;color: #000;">APP下载</a>  </li> 
+                <li><a href="https://lilun.lanzout.com/ibJJE04lej3c" target="_blank" style="background-color: #005fff; padding: 3px 10px;border-radius: 3px;color: #000;">APP下载</a>  </li> 
               </ul> 
               
               </li> 
@@ -162,7 +162,8 @@
            <!--                                    											<div class="clearfix"> </div>--> 
            <!--                                    										</div>--> 
            <div class="zuopin"> 
-            <ul> 
+            <ul>
+              <li> <a href="/model/zixingche.html" target="_blank"> <img src="/images/zuopin/dadao.jpg" alt="大刀" title="点击查看3D大刀" /> </a> <h4> 大刀</h4> <h4> <a href="/model/models/dadao.glb">下载</a> </h4> </li>  
              <li> <a href="/model/zixingche.html" target="_blank"> <img src="/images/zuopin/zixingche.jpg" alt="自行车" title="点击查看3D自行车" /> </a> <h4> 自行车</h4> <h4> <a href="/model/models/zixingche.glb">下载</a> </h4> </li> 
              <li> <a href="/model/youxiji.html" target="_blank"> <img src="/images/zuopin/youxiji.jpg" alt="游戏机" title="点击查看3D游戏机" /></a> <h4> 游戏机</h4> <h4> <a href="/model/models/youxiji.glb">下载</a></h4> </li> 
              <li> <a href="/model/index.html" target="_blank"> <img src="/images/zuopin/naozhong.jpg" alt="闹钟" title="点击查看3D闹钟" /></a> <h4>大闹钟</h4> <h4> <a href="/model/models/naozhong.glb" target="_blank">下载</a></h4> </li> 
