--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
            <!--                                    										</div>--> 
            <div class="zuopin"> 
             <ul>
-              <li> <a href="/model/zixingche.html" target="_blank"> <img src="/images/zuopin/dadao.jpg" alt="大刀" title="点击查看3D大刀" /> </a> <h4> 大刀</h4> <h4> <a href="/model/models/dadao.glb">下载</a> </h4> </li>  
+              <li> <a href="/model/dadao.html" target="_blank"> <img src="/images/zuopin/dadao.jpg" alt="大刀" title="点击查看3D大刀" /> </a> <h4> 大刀</h4> <h4> <a href="/model/models/dadao.glb">下载</a> </h4> </li>  
              <li> <a href="/model/zixingche.html" target="_blank"> <img src="/images/zuopin/zixingche.jpg" alt="自行车" title="点击查看3D自行车" /> </a> <h4> 自行车</h4> <h4> <a href="/model/models/zixingche.glb">下载</a> </h4> </li> 
              <li> <a href="/model/youxiji.html" target="_blank"> <img src="/images/zuopin/youxiji.jpg" alt="游戏机" title="点击查看3D游戏机" /></a> <h4> 游戏机</h4> <h4> <a href="/model/models/youxiji.glb">下载</a></h4> </li> 
              <li> <a href="/model/index.html" target="_blank"> <img src="/images/zuopin/naozhong.jpg" alt="闹钟" title="点击查看3D闹钟" /></a> <h4>大闹钟</h4> <h4> <a href="/model/models/naozhong.glb" target="_blank">下载</a></h4> </li> 
