--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li> <a href="https://github.com/cglun/BhelperPack/archive/refs/heads/main.zip" target="_blank">点击下载</a> <span style="font-size: 10px;color: black;font-weight: initial"> &nbsp;&nbsp;&nbsp;【更新时间： 2022-2-9】（搜狗浏览器等） </span> </li> -->
 
                 <li><b>贴吧光签</b></li> 
-                <li><a href="https://lilun.lanzout.com/ibJJE04lej3c" target="_blank" style="background-color: #005fff; padding: 3px 10px;border-radius: 3px;color: #000;">APP下载</a>  </li> 
+                <li><a href="https://lilun.lanzout.com/iYc5D05du9sb" target="_blank" style="background-color: #005fff; padding: 3px 10px;border-radius: 3px;color: #000;">APP下载</a>  </li> 
               </ul> 
               
               </li> 
